/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

package messages.support.nuclear.proto;

message ReactionStatistics {
    optional string name = 1;
    optional string triggerName = 2;
    optional string functionName = 3;
    optional uint64 reactionId = 4;
    optional uint64 taskId = 5;
    optional uint64 causeReactionId = 6;
    optional uint64 causeTaskId = 7;
    optional uint64 emitted = 8;
    optional uint64 started = 9;
    optional uint64 finished = 10;
}